--- a/ott_backend/build.gradle
+++ b/ott_backend/build.gradle
@@ -16,15 +16,24 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven { url 'https://repo.spring.io/milestone' }
+	maven { url 'https://repo.spring.io/snapshot' }
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'mysql:mysql-connector-java'
+
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// <https://mvnrepository.com/artifact/com.google.guava/guava>
+	compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
+
+
 }
 
 tasks.named('test') {
