--- a/ott_backend/build.gradle
+++ b/ott_backend/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'mysql:mysql-connector-java'
@@ -32,7 +33,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	// <https://mvnrepository.com/artifact/com.google.guava/guava>
 	compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
-
+	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
 }
 
